2010-07-13

	* libsylph/procmsg.c
	  libsylph/procmime.c: allow Content-Type without total parameter.

2010-07-12

	* libsylph/utils.[ch]
	  libsylph/procmsg.[ch]
	  libsylph/procmime.[ch]
	  src/mainwindow.c: implemented concatenation of partial messages
	  (RFC 2046). The header concatenation is still incomplete.

2010-07-08

	* faq/GFDL-1.2
	  faq/Makefile.am
	  faq/en/*.xml
	  faq/en/Makefile.am: added missing source files of English FAQ.
	  Also included GFDL-1.2 text file.

2010-07-07

	* src/prefs_common_dialog.c: changed the upper limit of auto check
	  interval to 1000 minutes.

2010-07-06

	* src/plugin.[ch]
	  src/main.c
	  plugin/test/test.c: added plug-in APIs to get selected messages
	  on summary.

2010-07-06

	* src/plugin.[ch]
	  src/main.c
	  src/summaryview.c
	  plugin/test/test.c: added new plug-in APIs for manipulating the
	  summary view popup menu.

2010-07-02

	* src/mainwindow.c
	  src/summaryview.c
	  src/prefs_common_dialog.c: changed 'Mark/Mark' to 'Mark/Set flag',
	  'Mark/Unmark' to 'Mark/Unset flag'.

2010-07-02

	* src/summaryview.c: summary_show(): display error if a connection to
	  IMAP/News server failed.

2010-07-02

	* src/plugin.[ch]
	  src/main.c
	  src/summaryview.[ch]
	  src/folderview.c: added write lock mode on summary view.

2010-07-01

	* src/foldersel.c: move up/collapse/expand row with left/right key.

2010-07-01

	* src/folderview.c: folderview_key_pressed(): modified key handling
	  code.

2010-07-01

	* src/mimeview.c: mimeview_selection_changed(): don't display images
	  when inline image setting is off (workaround for vulnerability).

2010-06-30

	* src/folderview.c: folderview_key_pressed(): move up/collapse/expand
	  row with left/right key (like Windows Explorer).

2010-06-30

	* libsylph/procmsg.[ch]
	  src/inc.c
	  src/summaryview.[ch]: update summary view on receiving on the fly.
	* configure.in: updated/fixed libtool version.

2010-06-18

	* libsylph/pop.c