@@ -1,5 +1,10 @@
 2010-07-13
 
+	* libsylph/procmsg.c: procmsg_concat_partial_messages(): fully
+	  implemented RFC 2046.
+
+2010-07-13
+
 	* libsylph/procmsg.c
 	  libsylph/procmime.c: allow Content-Type without total parameter.
 
